and im like yes, the party's pumpin yes, added the about section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="navBar">
-    <img src="images/allMindsMatterLogo.png" id="navBarLogo">
+    <a href="#imageBar"><img src="images/allMindsMatterLogo.png" id="navBarLogo"></a>
     <div id="summaryBox">
       <h1 id="navBarTitle"> All Minds Matter </h1>
       <h2 class="summary"> Academic Coaching </h2>
@@ -20,7 +20,8 @@
       <h2 class="summary"> Educational Services </h2>
     </div>
     <div id="linkBar">
-      <a href="#ourMission" class="navBarLink"> About </a>
+      <a href="#about" class="navBarLink"> About </a>
+      <a href="#ourMission" class="navBarLink"> Mission </a>
       <a href="#testimonials" class="navBarLink"> Testimonials </a>
       <a href="#services" class="navBarLink"> Services </a>
       <a href="#team" class="navBarLink"> Team </a>
@@ -36,6 +37,44 @@
     <div class="textContainer">
       <h2 class="bigquote"> “AMM is a one-stop organization that successfully assists students with time management skills while teaching the necessary study and academic skills.”
       <br> -Saratoga Psychologist </h2>
+    </div>
+  </div>
+  <div class="wideBar" id="about">
+    <h1> About All Minds Matter </h1>
+    <div class="halfFold">
+      <img src="images/reading.jpg" class="trifoldIcon">
+      <h2> Is your teen. . .</h2>
+      <ul>
+        <li>refusing your support?</li>
+        <li>experiencing homework meltdowns?</li>
+        <li>missing important assignments?</li>
+        <li>having trouble focusing?</li>
+        <li>identified as ADD/ADHD?</li>
+        <li>not communicating with teachers?</li>
+        <li>failing tests and quizzes?</li>
+        <li>falling behind in a core subject?</li>
+        <li>being referred to summer school?</li>
+        <li>jeopardizing a good GPA?</li>
+        <li>giving up on college?</li>
+        <li>losing the love for learning?</li>
+        <li>changing your family dynamics?</li>
+        <li>identified as Gifted and Talented (GATE)?</li>
+        <li>on an IEP or a 504 plan?</li>
+      </ul>
+    </div>
+    <div class="halfFold">
+      <img src="images/graduation.jpg" class="trifoldIcon">
+      <h2> We can help you to </h2>
+      <ul>
+        <li>find strategies for relaxed discussions with your teen about school work</li>
+        <li>avoid battles over homework</li>
+        <li>communicate effectively with teachers and administrators</li>
+        <li>navigate your teen through the school system</li>
+        <li>learn how a 504 plan or IEP can help you support your teen</li>
+      </ul>
+      <h3 style="padding-left: 30%; padding-right: 30%; font-size: 1.4em"> It’s time to contact All Minds Matter for academic coaching and educational services <br>
+      <b>Bring in the Reinforcements!</b><br><br>
+      Call <b>Caitlin</b> today at <br> <b>(408)-205-5838</b></h3>
     </div>
   </div>
   <div class="wideBar" id="ourMission">
@@ -135,7 +174,7 @@
   <div class="wideBar" id="team">
     <h1> Team </h1>
     <div class="halfFold">
-      <h2> Caitlin Hoffman </h2>
+      <h2> <b>Caitlin Hoffman</b> </h2>
       <img class="trifoldIcon" src="images/ammCaitlin.jpg">
       <h2> President, All Minds Matter </h2>
       <h3> Caitlin holds a Master of Arts Degree in Education Administration and Supervision. She has over twenty years teaching experience at the K-12 grade levels. Caitlin is a Silicon Valley educator and academic intervention specialist who has extensive experience working with students who are gifted and talented (GATE) or who have ADD/ADHD or learning disabilities. She understands the inner workings and complex requirements of the California education system.
@@ -146,7 +185,7 @@
 <a href="http://allmindsmatter.com/docs/Caitlin%20Hoffman%20Resume.pdf"> View Caitlin's Resume </a>
     </div>
     <div class="halfFold">
-      <h2> Don Hoffman </h2>
+      <h2> <b>Don Hoffman</b> </h2>
       <img class="trifoldIcon" src="images/ammDon.jpg">
       <h2> CEO, All Minds Matter </h2>
       <h3> Don holds a Doctorate in Physics and has over thirty years experience as a scientist, engineer, and manager. He has served on nuclear submarines, taught university physics, developed aerospace engineering algorithms, and managed teams of satellite engineers. A thirty-year member of Mensa, Don is currently writing a book on the relationship between quantum philosophy and reality. His experience with computers and software ranges from developing scientific applications to websites, over a time span that starts with the advent of the first personal computers. Don is willing to try to explain almost anything to you, if you've got the time!
@@ -179,7 +218,7 @@
     <a class="emailLink" href="http://allmindsmatter.com/docs/AMM%20Unplugged%20Quoddy%20Article.pdf"> The Quoddy Times </a>
     <br>
     <a class='emailLink' href="http://allmindsmatter.com/docs/LGWT%201-31-12.pdf"> LGWT Business Page </a>
-    <h3> Copyright 2016 All Minds Matter, LLC - Created by Khoi Le </h3>
+    <h3> &copy 2016 All Minds Matter, LLC - Created by Khoi Le </h3>
   </div>
 </body>
 </html>
