--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <a href="#contact" class="navBarLink"> Contact </a>
     </div>
     <div id="callNow">
-      <h2> To schedule a free 30-minute individual consultation, call or email: <br><b>Caitlin Hoffman</b>
-        <br> <i>(408)-205-5838 caitlin@allmindsmatter.com</i> </h2>
+      <h2> To schedule a free 30-minute<br>individual consultation, <br>call or email: <b>Caitlin Hoffman</b>
+        <br> <i>(408)-205-5838<br> caitlin@allmindsmatter.com</i> </h2>
     </div>
   </div>
   <div class="wideBar" id="imageBar">
