ayo got that mobile site running i think

--- a/mobileIndex.html
+++ b/mobileIndex.html
@@ -4,12 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="amm.css">
+  <link rel="stylesheet" type="text/css" href="ammMobile.css">
   <link rel="icon" href="images/allMindsMatterIcon.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
+  <div id="navBar">
+    <a href="#imageBar"><img src="images/allMindsMatterLogo.png" id="navBarLogo"></a>
+
+    <div id="linkBar">
+      <a href="#about" class="navBarLink"> About </a>
+      <a href="#ourMission" class="navBarLink"> Mission </a>
+      <a href="#testimonials" class="navBarLink"> Testimonials </a>
+      <a href="#services" class="navBarLink"> Services </a>
+      <a href="#team" class="navBarLink"> Team </a>
+      <a href="#contact" class="navBarLink"> Contact </a>
+    </div>
+  </div>
+  <div class="wideBar" id="summaryWide">
+      <h1 id="navBarTitle"> All Minds Matter </h1>
+      <h2 class="summary"> Academic Coaching </h2>
+      <h2 class="summary"> Academic Intervention </h2>
+      <h2 class="summary"> Educational Services </h2>
+  </div>
   <div class="wideBar" id="imageBar">
     <img src="images/allMindsMatterLogo.png" id="wideImage">
     <div class="textContainer">
@@ -81,11 +99,11 @@
         <h3> “I just wanted to pass along my recognition of your son's amazing academic turnaround this past six weeks. The All Minds Matter program he is working with is phenomenal! But I know that even the best of programs are not effective unless a student chooses to invest himself. Your son has obviously made the decision to apply his efforts in that direction. He is attentive in class, and more often than not, he is finishing his work in class. His test scores have significantly improved with an overall B+ on our last composite assessments. I mentioned to him this past week that I was proud of his turnaround--I'm sure your family is quite delighted.”
         <br> -Math teacher at Valley Christian High School </h3>
     </div>
-    <div class="box white">
+    <div class="box blue">
         <h3> “AMM has done an amazing job working with our son. By building a relationship with him, they have helped him improve his grades and regain his academic confidence. Being able to tutor across several subjects and use Aeries to track assignments and grades allows them to respond quickly where more attention is needed. We check-in with Caitlin frequently to assure we are on the same page. Eliminating homework battles at home has been "priceless!”
         <br>-Los Gatos parent of a graduating high school student </h3>
     </div>
-    <div class="box blue">
+    <div class="box white">
         <h3> “His grades are ‘A's and 'B's right now, which is something I've never seen come out of him. AMM has been instrumental to his success and confidence.”
         <br> -Los Gatos parent of an 8th grader </h3>
     </div>
