commit fixing some text size issues

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <script src="index.js"></script>
 </head>
 <body>
+  <script type="text/javascript">
+      if (screen.width <= 800) {
+          window.location = "https://ryankhoile.github.io/allmindsmatter/mobileIndex.html";
+      }
+      if(window.innerWidth <= 600){
+          window.location = "https://ryankhoile.github.io/allmindsmatter/mobileIndex.html";
+      }
+  </script>
   <div id="navBar">
     <a href="#imageBar"><img src="images/allMindsMatterLogo.png" id="navBarLogo"></a>
     <div id="summaryBox">
