--- a/mobileIndex.html
+++ b/mobileIndex.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="wideBar" id="testimonials">
-    <h1 style="font-size: 4.3em"> Testimonials </h1>
+    <h1> Testimonials </h1>
     <div class="box blue">
         <h3> “Our experience with All Minds Matter (AMM) has been truly exceptional. Our daughter started at AMM the fall of her 8th grade year. She had struggled the year prior with missing assignments, organization and follow through, which made it hard to achieve a GPA higher than a 2.67. Her first quarter of 8th grade, she attended AMM regularly and achieved Honor Roll. She continued to achieve Honor Roll through the 2nd quarter. and in her 3rd quarter had gained the skills to begin working at home more on her own. That quarter she got a 4.0. The fourth quarter, she did not use AMM at all, and still finished the school year making Honor Roll. In addition to her success in school, her self-esteem improved dramatically and the environment in our home was less conflictual. Her story is a testament to the quality of intervention provided by AMM. The staff at AMM teach the students the skills to be successful on their own, by providing the guidance, assistance and support the students need without being a crutch. This not only results in academic success but also in emotional confidence and increased self-esteem. Thank you so much, Caitlin and Donald for creating such a wonderful program.”
         <br> -Los Gatos parent of an 11th grader </h3>
