--- a/mobileIndex.html
+++ b/mobileIndex.html
@@ -68,7 +68,7 @@
         <li>navigate your teen through the school system</li>
         <li>learn how a 504 plan or IEP can help you support your teen</li>
       </ul>
-      <h3 style="padding-left: 30%; padding-right: 30%; font-size: 1.4em"> It’s time to contact All Minds Matter for academic coaching and educational services <br>
+      <h3 style="font-size: 1.4em"> It’s time to contact All Minds Matter for academic coaching and educational services <br>
       <b>Bring in the Reinforcements!</b><br><br>
       Call <b>Caitlin</b> today at <br> <b>(408)-205-5838</b></h3>
     </div>
