fixed don's email

--- a/mobileIndex.html
+++ b/mobileIndex.html
@@ -206,7 +206,7 @@
     <br>
     <h2> <b> Don Hoffman </b> <br>
        Cell: (408)-205-5848 <br>
-       Email: <a class="emailLink" href="mailto:don@allmindsmatter.com"> don@allmindsmatter.com </a> </h2>
+       Email: <a class="emailLink" href="mailto:donhoffman@allmindsmatter.com"> donhoffman@allmindsmatter.com </a> </h2>
        <hr>
      <a href="http://allmindsmatter.com/docs/AMM%20Trifold%20Brochure.pdf"> View All Minds Matter's Brochure </a>
     <hr>
