--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <script type="text/javascript">
       if (screen.width <= 800) {
-          window.location = "https://ryankhoile.github.io/allmindsmatter/mobileIndex.html";
+          window.location = "https://dragonkhoi.github.io/allmindsmatter/mobileIndex.html";
       }
       if(window.innerWidth <= 600){
-          window.location = "https://ryankhoile.github.io/allmindsmatter/mobileIndex.html";
+          window.location = "https://dragonkhoi.github.io/allmindsmatter/mobileIndex.html";
       }
   </script>
   <div id="navBar">
