--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#contact" class="navBarLink"> Contact </a>
     </div>
     <div id="callNow">
-      <h2> To schedule a free 30-minute<br>individual consultation, <br>call or email: <b>Caitlin Hoffman</b>
+      <h2 style="font-size: 18px;"> To schedule a free 30-minute<br>individual consultation, <br>call or email: <b>Caitlin Hoffman</b>
         <br> <i>(408)-205-5838<br> caitlin@allmindsmatter.com</i> </h2>
     </div>
   </div>
